--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>AOS Maintenance</title><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta3/css/bootstrap.min.css"></head><body class="d-flex d-sm-flex d-md-flex d-xl-flex align-items-center align-items-sm-center align-items-md-center justify-content-xl-start" style="height: 100vh;background: rgb(0,0,0);"><div class="container d-md-flex d-xl-flex flex-column align-items-md-center justify-content-xl-center align-items-xl-center"><video width="560" height="315" loop="" autoplay="" style="margin-bottom: 5%;"><source src="app-covers-apple-outline.mp4" type="video/mp4"></video><h1 class="display-1 text-center" style="color: rgb(255,255,255);font-weight: 350;"><strong>Be right back.</strong></h1><p class="text-center" style="color: rgb(255,255,255);">We’re making updates to the Apple Store. Check back soon.</p></div><script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta3/js/bootstrap.bundle.min.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>AOS Maintenance</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta3/css/bootstrap.min.css">
+</head>
+
+<body class="d-flex d-sm-flex d-md-flex d-xl-flex align-items-center align-items-sm-center align-items-md-center justify-content-xl-start" style="height: 100vh;background: rgb(0,0,0);">
+    <div class="container d-md-flex d-xl-flex flex-column align-items-md-center justify-content-xl-center align-items-xl-center"><video width="560" height="315" loop="" autoplay="" style="margin-bottom: 5%;">
+            <source src="app-covers-apple-outline.mp4" type="video/mp4">
+        </video>
+        <h1 class="display-1 text-center" style="color: rgb(255,255,255);font-weight: 350;"><strong>Be right back.</strong></h1>
+        <p class="text-center" style="color: rgb(255,255,255);">We’re making updates to the Apple Store. Check back soon.</p>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta3/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
